--- a/mysite/mysite/static/css/style.css
+++ b/mysite/mysite/static/css/style.css
@@ -3,7 +3,7 @@ header {
     left: 0;
     top: 0;
     height: 20px;
-    background:#3b5998 url('/img/soybean1.jpg') no-repeat 50px 25px;
+    background:#3b5998 url('/img/green-beans-1.jpg') no-repeat 50px 25px; 
     border-bottom: 1px solid #133783;
     width: 100%;
 }
