--- a/mysite/mysite/static/css/style2.css
+++ b/mysite/mysite/static/css/style2.css
@@ -3,7 +3,7 @@ header {
     left: 0;
     top: 0;
     height: 50px;
-    background:url('../logo/soybean1.jpg');
+    background:url('../logo/green-beans-1.jpg');
     border-bottom: 1px solid #133783;
     width: 100%;
 }
