--- a/mysite/mysite/template/single_recipe.html
+++ b/mysite/mysite/template/single_recipe.html
@@ -4,8 +4,8 @@
 {% block bodyId %}welcomePage{% endblock %}
 {% block content %}
 
-<h1> hello </h1>
-<h1>{{recipe_to_show.title}}  </h1>
+<h1>{{recipe_to_show.title}} , for {{recipe_to_show.number_people}} people  </h1>
+
     <p>
         {{recipe_to_show.description}}
     </p>
