--- a/mysite/mysite/template/welcome.html
+++ b/mysite/mysite/template/welcome.html
@@ -16,7 +16,7 @@ Welcome on Soybean! </h1>
 
     <div>
         <form method="post"> {% csrf_token %}
-            <<a href="singlerecipe?RecipeToShow={{recipe.id}}">{{recipe.title}}</a>>
+            <a href="singlerecipe?RecipeToShow={{recipe.id}}">{{recipe.title}}</a>
 
         </form>
     </div>
