--- a/mysite/mysite/static/css/style2.css
+++ b/mysite/mysite/static/css/style2.css
@@ -15,6 +15,10 @@ body#loginPage, section#content  {
     width: 500px;
     margin: 0 0 0 0px;
     padding:0;
+    body {
+    background: url(/img/cream_dust.png) repeat 0 0;
+}
+
     
 }
 
