--- a/mysite/mysite/template/addrecipe.html
+++ b/mysite/mysite/template/addrecipe.html
@@ -2,28 +2,27 @@
 #{% block title %}Addrecipe{% endblock %}
 {% block bodyId %}newrecipe{% endblock %}
 {% block content %}
+<link rel="stylesheet" type="text/css" href="/static/css/addrecipe.css" />
 
 <h1> Add a new recipe </h1>
 
-<form method= "get" class= "InlineForm">
-    <p>
+<form name= "RecipeName" method= "get" class= "InlineForm">
+
     <label for="newRecipeTitleInput"> Title: </label>
     <input type = "text" name = "newRecipeTitle" id="newRecipeTitleInput" />
-    </p>
-    <p>
+
     <label for="newRecipeInstructionsInput" contenteditable="true">Instructions: </label>
     <input type = "text" name = "newRecipeInstructions" id="newRecipeInstructionsInput" />
-    </p>
-    <p>
+
     <label for="newRecipeIngredientsInput"> Ingredients: </label>
     <input type = "text" name = "newRecipeIngredients" id="newRecipeIngredientsInput" />
-    </p>
-    <p>
+
     <label for="newRecipeNPeopleInput"> Number of people: </label>
     <input type = "text" name = "newRecipeNPeople" id="newRecipeNPeopleInput" />
-    </p>
-    <p>
-    <input type = "submit" value = "Publish" />
-    </p>
+    <div id="buttons">
+        <input type = "submit" value = "Publish" />
+
+        <input type="submit" VALUE="Back" onClick="history.go(-1);return true;">
+    </div>
 </form>
 {%endblock%}
