--- a/mysite/mysite/template/base.html
+++ b/mysite/mysite/template/base.html
@@ -3,7 +3,9 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
+        <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="/static/css/style2.css" />
+
         <title>Soybean - {% block title%} Bienvenue{%endblock%}</title>
     </head>
     <body id="{%block bodyId %}genericPage{% endblock%}" >
