--- a/mysite/mysite/template/search_ingredients.html
+++ b/mysite/mysite/template/search_ingredients.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Accueil{% endblock %}
-{% block bodyId %}welcomePage{% endblock %}
+{% block bodyId %}Ingr_Search_Page{% endblock %}
 {% block content %}
 
 
