--- a/mysite/mysite/template/addrecipe.html
+++ b/mysite/mysite/template/addrecipe.html
@@ -2,27 +2,28 @@
 #{% block title %}Addrecipe{% endblock %}
 {% block bodyId %}newrecipe{% endblock %}
 {% block content %}
-<link rel="stylesheet" type="text/css" href="/static/css/addrecipe.css" />
 
-<h1> Add a new recipe </h1>
+<h1 class="welcome_name"> Add a new recipe </h1>
+<div id="add_recipe_div" >
+    <form name= "RecipeName" method= "get" class= "InlineForm">
 
-<form name= "RecipeName" method= "get" class= "InlineForm">
+        <label class="label_newrecipe" for="newRecipeTitleInput"> Title: </label>
+        <input type = "text" name = "newRecipeTitle" id="newRecipeTitleInput" />
 
-    <label for="newRecipeTitleInput"> Title: </label>
-    <input type = "text" name = "newRecipeTitle" id="newRecipeTitleInput" />
+        <label  class="label_newrecipe" for="newRecipeInstructionsInput" contenteditable="true">Instructions: </label>
+        <input type = "text" name = "newRecipeInstructions" id="newRecipeInstructionsInput" />
 
-    <label for="newRecipeInstructionsInput" contenteditable="true">Instructions: </label>
-    <input type = "text" name = "newRecipeInstructions" id="newRecipeInstructionsInput" />
+        <label  class="label_newrecipe" for="newRecipeIngredientsInput"> Ingredients: </label>
+        <input type = "text" name = "newRecipeIngredients" id="newRecipeIngredientsInput" />
 
-    <label for="newRecipeIngredientsInput"> Ingredients: </label>
-    <input type = "text" name = "newRecipeIngredients" id="newRecipeIngredientsInput" />
+        <label  class="label_newrecipe" for="newRecipeNPeopleInput"> Number of people: </label>
+        <input type = "text" name = "newRecipeNPeople" id="newRecipeNPeopleInput" />
+        <div id="buttons">
+            <input type = "submit" value = "Publish" />
 
-    <label for="newRecipeNPeopleInput"> Number of people: </label>
-    <input type = "text" name = "newRecipeNPeople" id="newRecipeNPeopleInput" />
-    <div id="buttons">
-        <input type = "submit" value = "Publish" />
+            <input type="submit" VALUE="Back" onClick="history.go(-1);return true;">
+        </div>
+    </form>
 
-        <input type="submit" VALUE="Back" onClick="history.go(-1);return true;">
-    </div>
-</form>
+</div>
 {%endblock%}
