add recipe: HTML css

--- a/mysite/mysite/template/addrecipe.html
+++ b/mysite/mysite/template/addrecipe.html
@@ -11,7 +11,7 @@
         <input type = "text" name = "newRecipeTitle" id="newRecipeTitleInput" />
 
         <label  class="label_newrecipe" for="newRecipeInstructionsInput" contenteditable="true">Instructions: </label>
-        <input type = "text" name = "newRecipeInstructions" id="newRecipeInstructionsInput" />
+        <textarea type = "text" name = "newRecipeInstructions" id="newRecipeInstructionsInput" rows="7"  ></textarea>
 
         <label  class="label_newrecipe" for="newRecipeIngredientsInput"> Ingredients: </label>
         <input type = "text" name = "newRecipeIngredients" id="newRecipeIngredientsInput" />
