--- a/mysite/mysite/static/css/style2.css
+++ b/mysite/mysite/static/css/style2.css
@@ -134,6 +134,7 @@ label{
     font-family: 'Shadows Into Light', cursive;
     max-width: 700px;
     width: 100%;
+    height: 300px;
     margin:5% auto 0 auto;
     border-radius: 6px;
 
@@ -143,6 +144,33 @@ label{
     clear:both;
     width:200px;
     float: left;
+    padding: 0 0 0 20px;
+}
+
+form input[type="text"], textarea {
+    width: 450px;
+    float: right;
+    padding: 0 20px 0 0;
+    margin: 0 0 20px 0;
+}
+
+#buttons {
+    clear: both;
+    padding: 0 0 0 300px;
+    margin: 0 0 20px 0;
+
+}
+
+form input[type="submit"]{
+    font-family: 'Shadows Into Light', cursive;
+    background-color:#347235;
+    color:white;
+    font-size: 23px;
+}
+
+form input[type="submit"]:hover{
+    background-color:#4E9258;
+
 }
 
 
@@ -207,7 +235,4 @@ ul.errorlist {
 
 
 
-#buttons {
-    clear: both;
-    padding: 0 0 0 150px;
-}*/
+*/
