--- a/mysite/mysite/static/css/style2.css
+++ b/mysite/mysite/static/css/style2.css
@@ -12,9 +12,10 @@ html {
     opacity: 0.85;
     padding: 30px;
     font-family: 'Shadows Into Light', cursive;
-    max-width: 400px;
+    max-width: 700px;
     width: 100%;
-    margin:10% auto 0 auto;
+    margin:5% auto 0 auto;
+    border-radius: 6px;
 }
 
 #loginPage {
@@ -32,19 +33,20 @@ html {
 
 label{
     float: left;
-    width:50px;
+    width:150px;
     font-family: 'Shadows Into Light', cursive;
     font-size: 23px;
+    margin: 0 0 20px 0;
  }
 
 #id_email1, #id_password1 {
-    margin-left: 70px;
+    margin: 0 0 20px 70px;
 }
 
 #submit_login {
     display: inline-block;
     text-align:center;
-    margin-left: 70px;
+    margin-left: 170px;
     padding-top:50px;
     font-family: 'Shadows Into Light', cursive;
     font-size: 23px;
@@ -108,14 +110,14 @@ label{
     display: inline-block;
     font-size: 40px;
     border: 2px solid;
-    position: relative;
+    border-radius: 6px;
 }
 
 #display_single_recipe:hover {
     background-color: #7D0541;
 }
 
-#welcome_box {
+.welcome_box {
     text-decoration: none;
     color: white;
 }
@@ -126,7 +128,7 @@ label{
     background:url('../logo/dish_asperges.jpg');
     background-size: cover;
 }
-#add_recipe_div {
+.add_recipe_div {
     background-color: white;
     font-size: 23px;
     opacity: 0.85;
@@ -147,33 +149,62 @@ label{
     padding: 0 0 0 20px;
 }
 
-form input[type="text"], textarea {
+form input[type="text"], form input[type="number"], form input[type="email"], textarea {
     width: 450px;
     float: right;
     padding: 0 20px 0 0;
     margin: 0 0 20px 0;
 }
 
-#buttons {
+.buttons {
     clear: both;
-    padding: 0 0 0 300px;
+    padding: 0 0 0 225px;
     margin: 0 0 20px 0;
 
 }
 
-form input[type="submit"]{
+form input[type="submit"],#create_account_button {
     font-family: 'Shadows Into Light', cursive;
     background-color:#347235;
     color:white;
     font-size: 23px;
+    width: 200px;
 }
 
 form input[type="submit"]:hover{
     background-color:#4E9258;
+}
+
+/* single recipe*/
+
+#singleRecipePage {
+    background:url('../logo/dish_artichot.jpg');
+    background-size: cover;
+}
+
+#button_recipe {
 
 }
 
+/* register */
 
+#UserProfilePage {
+    background: url('../logo/dish-spices2.jpg');
+    background-size: cover;
+}
+
+.add_recipe_div {
+    background-color: white;
+    font-size: 23px;
+    opacity: 0.85;
+    padding: 30px;
+    font-family: 'Shadows Into Light', cursive;
+    max-width: 700px;
+    width: 100%;
+    height: 300px;
+    margin: 5% auto 0 auto;
+    border-radius: 6px;
+}
 /*
 h1 { background-color: white;
     position: absolute;
