--- a/mysite/mysite/template/login.html
+++ b/mysite/mysite/template/login.html
@@ -3,7 +3,7 @@
 {% block bodyId %}loginPage{% endblock %}
 {% block content %}
 
-<h1 id = "login_name" > Soybean, haute Cuisine pour tous </h1>
+<h1 class="welcome_name" > Soybean, haute Cuisine </h1>
 <form id="login_email_pass" action="/login" method="post"> {% csrf_token %}
 
     
@@ -13,7 +13,7 @@
     {% endif %}
     <div id="submit_login">
         <input id="submit_login_button" type="submit" value="Connect"/>
-        <a  href=register> Create an account</a>
+        <a class="welcome_box" id="create_account_button" href=register> Create an account</a>
     </div>
 </form>
 {% endblock %}
