--- a/mysite/mysite/template/user_profile.html
+++ b/mysite/mysite/template/user_profile.html
@@ -2,11 +2,15 @@
 {% block title %}Create a profile{% endblock %}
 {% block bodyId %}UserProfilePage{% endblock %}
 {% block content %}
-<h1>Creation of an account</h1>
-<form action="register" method="get"> {% csrf_token %}    
-    {{ban.as_p}}    
-    <p>
-        <input type="submit" value="Create an account"/>
-    </p>
-</form>
+
+<h1 class="welcome_name">Creation of an account</h1>
+
+<div class="add_recipe_div" >
+    <form action="register" method="get"> {% csrf_token %}
+        {{ban.as_p}}
+        <p>
+            <input type="submit" name= "create_account_button" value="Create an account"/>
+        </p>
+    </form>
+</div>
 {% endblock %}
