--- a/mysite/mysite/static/css/style2.css
+++ b/mysite/mysite/static/css/style2.css
@@ -65,6 +65,11 @@ label{
 
 .errorlist{
     color: #C11B17;
+    width:200px;
+    font-family: 'Shadows Into Light', cursive;
+    font-size: 14px;
+    clear: both;
+
 }
 
 /* welcome Page*/
