--- a/mysite/mysite/template/login.html
+++ b/mysite/mysite/template/login.html
@@ -12,8 +12,8 @@
     <div class="error">{{error}}</div>
     {% endif %}
     <div id="submit_login">
-        <input id="submit_login_button" type="submit" value="Connect"/>
-        <a class="welcome_box" id="create_account_button" href=register> Create an account</a>
+        <input id="submit_login_button1" name="submit_login_button" type="submit" value="Connect"/>
+        <input id="submit_login_button2" name="create_account_login_button" type="submit" value="Create an account" />
     </div>
 </form>
 {% endblock %}
