--- a/mysite/mysite/template/user_profile.html
+++ b/mysite/mysite/template/user_profile.html
@@ -6,11 +6,10 @@
 <h1 class="welcome_name">Creation of an account</h1>
 
 <div class="add_recipe_div" >
-    <form action="register" method="get"> {% csrf_token %}
+    <form action="register" method="post"> {% csrf_token %}
         {{ban.as_p}}
-        <p>
-            <input type="submit" name= "create_account_button" value="Create an account"/>
-        </p>
+        <input type="submit" name= "create_account_button" value="Create"/>
+        <input type="submit" name= "back_button_register" value="Back to Homepage"/>
     </form>
 </div>
 {% endblock %}
