--- a/mysite/mysite/template/welcome.html
+++ b/mysite/mysite/template/welcome.html
@@ -19,7 +19,7 @@ Welcome on Soybean! </h1>
     </form>
 
     {% for recipe in Addedrecipe %}
-        <div id="display_single_recipe">
+        <div class="display_single_recipe">
             <form method="post"> {% csrf_token %}
                 <a class= "welcome_box" href="singlerecipe?RecipeToShow={{recipe.id}}">{{recipe.title}}</a>
 
