--- a/mysite/mysite/static/css/style2.css
+++ b/mysite/mysite/static/css/style2.css
@@ -114,7 +114,7 @@ label{
     border-radius: 6px;
 }
 
-#display_single_recipe:hover {
+.display_single_recipe:hover {
     background-color: #7D0541;
 }
 
