--- a/mysite/mysite/template/search_ingredients.html
+++ b/mysite/mysite/template/search_ingredients.html
@@ -32,7 +32,7 @@
     </form>
 
 
-
+</div>
     <div id="recipe_diplayed">
         <p id="offer_cooking"> You could cook: </p>
 
@@ -46,4 +46,6 @@
 
     </div>
 
+    <div id="page"></div>
+    <!-- /#page -->
 {%endblock%}
