--- a/mysite/mysite/static/css/style2.css
+++ b/mysite/mysite/static/css/style2.css
@@ -59,7 +59,7 @@ label{
 }
 
 
-.errorlist{
+.errorlist, .helptext{
     color: #C11B17;
     width:200px;
     font-family: 'Shadows Into Light', cursive;
@@ -137,20 +137,20 @@ label{
     font-family: 'Shadows Into Light', cursive;
     max-width: 700px;
     width: 100%;
-    height: 300px;
+    height: 500px;
     margin:5% auto 0 auto;
     border-radius: 6px;
 
 }
 
-.label_newrecipe {
+.label_newrecipe  {
     clear:both;
     width:200px;
     float: left;
     padding: 0 0 0 20px;
 }
 
-form input[type="text"], form input[type="number"], form input[type="email"], textarea {
+form input[type="text"], form input[type="number"], form input[type="email"], form input[type="password"], textarea {
     width: 450px;
     float: right;
     padding: 0 20px 0 0;
@@ -159,7 +159,7 @@ form input[type="text"], form input[type="number"], form input[type="email"], te
 
 .buttons {
     clear: both;
-    padding: 0 0 0 225px;
+    padding: 0 0 0 150px;
     margin: 0 0 20px 0;
 
 }
@@ -188,6 +188,8 @@ form input[type="submit"]:hover{
 }
 
 /* register */
+
+
 
 #UserProfilePage {
     background: url('../logo/dish-spices2.jpg');
